tests/negative/test_block_eval_passing_exit.orb
fnc main () () {
    eval (block b0 i32 {
        exit b0 true;
    });
};